# kicad-script

./: setup.cfg  test_board.py  test_create.py  test_integrate.py
fixtures/: initial.kicad_pro
kicad_script/: __init__.py
src/kicad_script/: __init__.py
test.pretty/: test.kicad_mod
