[metadata]
name = kicad-script
version = 0.0.1
author = Mike Bannister
author_email = mikebannister@gmail.com
url = https://github.com/possibilities/kicad-script

[options]
package_dir =
    = kicad_script
packages = find:
python_requires = >=3.6
setup_requires =
  pytest-runner
tests_require =
  pytest
install_requires =
  sexpdata @ git+https://github.com/jd-boyd/sexpdata.git

[options.packages.find]
where = kicad_script
